Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17173

QDeclarativeView flickers when composited on MeeGo

    XMLWordPrintable

Details

    • 82a53835a71a8e1902774c67e792bf6d7d6385de

    Description

      The MeeGo window compositor (http://meego.gitorious.org/meegotouch/meegotouch-compositor) allows an app to perform direct rendering to the screen when that app is maximized. Only when two or more windows need to be visible at the same time will the windows will be redirect rendered and composited by window manager. All QML apps are currently visibly flickering when entering or exiting the window composition mode, such as when the MeeGo VKB pops up.

      The reason for the flicker is the QDeclarativeView widget is filling its own background with a white color on each frame. On redirection there appears to be a small lag between the window fill color being drawn and the app components being drawn on top of it, causing the white flash.

      You can get rid of the flickering by doing this in all the apps:
      QDeclarativeView window;
      window.setAttribute(Qt::WA_OpaquePaintEvent);
      window.setAttribute(Qt::WA_NoSystemBackground);
      window.viewport()->setAttribute(Qt::WA_OpaquePaintEvent);
      window.viewport()->setAttribute(Qt::WA_NoSystemBackground);

      MeeGo Touch does this by default for the top-level MWindow. I think this should be the default for QDeclarativeView as well; the background fill color of the window is already in practice determined by the root QML element.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            tjunnone Tomas Junnonen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes