QDeclarativeView flickers when composited on MeeGo

Set Qt::WA_OpaquePaintEvent and Qt::WA_NoSystemBackground for
QDeclarativeView on meego.

Change-Id: I301d2381ae831485d205ff42b0c15b3fa7a73424
Task-number: QTBUG-17173
Reviewed-by: Michael Brasser